charts/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: vuestorefront
  name: vuestorefront
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: vuestorefront
    spec:
      containers:
      - env:
        - name: BIND_HOST
          valueFrom:
            configMapKeyRef:
              key: BIND_HOST
              name: app-docker-vue-storefront-default-env
        - name: NODE_CONFIG_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_CONFIG_ENV
              name: app-docker-vue-storefront-default-env
        - name: PM2_ARGS
          valueFrom:
            configMapKeyRef:
              key: PM2_ARGS
              name: app-docker-vue-storefront-default-env
        - name: VS_ENV
          valueFrom:
            configMapKeyRef:
              key: VS_ENV
              name: app-docker-vue-storefront-default-env
        image: gcr.io/root-sanctuary-212300/github-mazaleyrat-vue-storefront:latest 
        name: vuestorefront
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /var/www/dist
          name: app-tmpfs0
      restartPolicy: Always
      volumes:
      - emptyDir:
          medium: Memory
        name: app-tmpfs0
status: {}
