charts/es1-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: es1
  name: es1
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: es1
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          valueFrom:
            configMapKeyRef:
              key: ES_JAVA_OPTS
              name: es1-docker-elasticsearch-default-env
        - name: bootstrap.memory_lock
          valueFrom:
            configMapKeyRef:
              key: bootstrap.memory_lock
              name: es1-docker-elasticsearch-default-env
        - name: discovery.type
          valueFrom:
            configMapKeyRef:
              key: discovery.type
              name: es1-docker-elasticsearch-default-env
        image: gcr.io/root-sanctuary-212300/github-mazaleyrat-elasticsearch
        imagePullPolicy: IfNotPresent
        name: es1
        ports:
        - containerPort: 9200
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: esdat1
      restartPolicy: Always
      volumes:
      - name: esdat1
        persistentVolumeClaim:
          claimName: esdat1
status: {}
