charts/kibana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.16.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          valueFrom:
            configMapKeyRef:
              key: ELASTICSEARCH_URL
              name: kibana-docker-kibana-default-env
        image: kibana
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}
      restartPolicy: Always
status: {}
