charts/es1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: es1
  name: es1
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  selector:
    app: es1
