charts/magento2-deployment.yaml
# The following code is for creating single-instance of magento2 Deployment and Service
apiVersion: v1
kind: Service
metadata:
  name: magento2
  labels:
    app: magento2
spec:
  ports:
    - port: 8081
  selector:
    app: magento2
    tier: frontend
  type: NodePort #any service of type NodePort can be accessed over that IP address
---
#This it to deploy magento2 container to Kubernetes
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: magento2
  labels:
    app: magento2
spec:
  selector:
    matchLabels:
      app: magento2
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: magento2
        tier: frontend
    spec:
      containers:
      - image: alexcheng/magento2  #https://hub.docker.com/r/alexcheng/magento2/
        name: magento2
        ports:
        - containerPort: 8081
          name: magento2
