charts/mysql-deployment.yaml
# the following code is for creating single-instance mysql deployment & service
apiVersion: v1
kind: Service
metadata:
  name: magento2-mysql
  labels:
    app: magento2
spec:
  ports:
    - port: 3306
  selector:
    app: magento2
    tier: mysql
  clusterIP: None
