charts/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 8081
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8081
  - host: api.lebonflacon.com
    http:
      paths:
      - path: /
        backend:
          serviceName: lebonflacon-api
          servicePort: 8080
