charts/ingress-www.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: www.lebonflacon.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vuestorefront
          servicePort: 3000
  tls:
  - secretName: tls-prod-cert
    hosts:
    - www.lebonflacon.com
